[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taiyin-ephemeris-semi-analytic"
version = "0.1.0"
description = "A compact frozen-coefficient semi-analytical planetary and lunar ephemeris"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["astronomy", "ephemeris", "moon", "planets", "semi-analytical"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Typing :: Typed",
]

[project.scripts]
taiyin-semi-analytic = "taiyin_semi_analytic.core:main"

[project.urls]
Homepage = "https://github.com/RedSC1/taiyin-ephemeris-semi-analytic"
Repository = "https://github.com/RedSC1/taiyin-ephemeris-semi-analytic.git"
Issues = "https://github.com/RedSC1/taiyin-ephemeris-semi-analytic/issues"

[tool.setuptools.packages.find]
include = ["taiyin_semi_analytic*"]

[tool.setuptools.package-data]
taiyin_semi_analytic = ["py.typed"]
